# AutoEncoder

./: README.md  config.json  pyproject.toml
src/: autoencoder.py  encoder.py  scanner.py
