[tool]
name = "linux-video-encoder"
version = "0.1.0"
description = "A project to find and encode video files on a Linux machine using FFmpeg."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
ffmpeg-python = "^0.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"